# PantsSys

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  PantsAsm.make  PantsC.make  PantsEmu.make  PantsEmuTest.make  PantsEnc  PantsSim.cpp  README.md  add.s  fmt.make  func.s  isa.md  mkfs.pantsfs.make  premake5.lua
Common/include/: Assert.hpp  BitTwiddling.hpp  (+5 more)
Docs/: PantsFS.html  standardese_entities.html
PantsAsm/: premake5.lua
PantsC/: CMakeLists.txt  premake5.lua
PantsC/include/: #AST.hpp#  AST.hpp  ASTDeserializer.hpp  ASTPrinter.hpp  ASTSerializationIds.hpp  ASTSerializer.hpp  CodeGen.hpp  DiagPrinter.hpp  Diagnostic.hpp  Lexer.hpp  Lexer.tpp  Parser.hpp  Tokens.hpp  Type.hpp
PantsC/samples/: arith.pant  class.pant  deref.pant  enum.pant  error.pant  helloworld.pant  if.pant  in.pth  lex.pants  return.pant  var.pant  while.pant
PantsC/src/: ASTDeserializer.cpp  ASTPrinter.cpp  ASTSerializationIds.hpp  ASTSerializer.cpp  ASTVisitor.cpp  CodeGen.cpp  Compiler.cpp  DiagPrinter.cpp  Lexer.cpp  Parser.cpp
PantsC/test/lexer/: generate_tests.py  premake5.lua  testcase_comment.cpp  testcase_lex.cpp
PantsC/test/lexer/cases/: comment.pant  lex.pant
PantsC/test/parser/: generate_tests.py  premake5.lua  testcase_class.cpp
PantsC/test/parser/cases/: class.pant
PantsFS/: README.md  README.md~  premake5.lua
PantsSim/: premake5.lua
docs/: PantsEnc  _config.yml
ext/: CMakeLists.txt  optional.hpp  premake5.lua  status_value.hpp
include/: Parser.hpp
samples/: store.s  test.pant
src/: PantsUI.cpp
utils/: format-source  tidy-source
(+48 files in other folders)
